# governance_experiments

./: .gitignore  README.md  pyproject.toml
src/agent_governance/multi_agent/: README.md  __init__.py  config.py  generate_diagram.py  generate_results.py  generate_slide_empirical.py  generate_slide_guardrails.py  governance.py  graph.py  run.py  tools.py
