[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-governance-demo"
version = "0.1.0"
description = "Multi-Agent Governance Demo — zeigt warum LLM-Agenten auf Cloud-Infrastruktur einen Governance-Layer brauchen."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "micmink" }]

dependencies = [
    "langgraph>=0.4",
    "langchain-ollama>=0.3",
    "langchain-core>=0.3",
    "matplotlib>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_governance"]

[project.scripts]
agent-governance-demo = "agent_governance.multi_agent.run:main"
